# Gospel-Language-Study

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  renovate.json
backend/: mypy.ini  pyproject.toml  ruff.toml
backend/src/gls/: __init__.py  config.py  main.py
backend/src/gls/api/: __init__.py  deps.py
backend/src/gls/api/v1/: playback.py  router.py  talks.py
backend/src/gls/domain/: models.py  protocols.py
backend/src/gls/domain/services/: __init__.py
backend/src/gls/infrastructure/database/: __init__.py
backend/src/gls/infrastructure/storage/: __init__.py  talk_storage.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_api.py
frontend/: .prettierignore  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/src/: app.css
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/talks/[talkId]/: +page.svelte
scripts/: clean_text.py  generate_alignment.py  preprocess_pdf.py  transcribe_openai.py
